fix overflow in ssh command

--- a/css/tipsinfo.less
+++ b/css/tipsinfo.less
@@ -131,7 +131,6 @@ pre.commandline {
  background-color: black;
  color: yellowgreen;
  padding: 3%;
- overflow: hidden;
  user-select: text;
  font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
 }
